<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/activity_bg"
    tools:context=".AddChlid">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="0.3">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.75">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/big_text"
                android:textColor="@color/blue"
                android:textSize="35dp"
                android:gravity="center"
                android:layout_marginBottom="@dimen/dp_5"
                android:layout_centerInParent="true"
                android:id="@+id/big_text"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add Child"
                android:layout_alignParentTop="true"
                android:textColor="@color/blue"
                android:textSize="20dp"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:id="@+id/small_text"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.83"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.65"
            android:layout_marginTop="@dimen/dp_5"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:layout_weight="0.15">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:gravity="left|center"
                    android:text="@string/first_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dp_15" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/dp_5"
                    android:layout_marginTop="@dimen/dp_5"
                    android:layout_weight="0.6"
                    android:gravity="left|center"
                    android:background="@drawable/bg_edittext"
                    android:paddingLeft="@dimen/dp_5"
                    android:paddingRight="@dimen/dp_5"
                    android:id="@+id/edt_first_name"
                    android:singleLine="true"
                    android:imeOptions="actionNext"></EditText>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:layout_weight="0.15">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:gravity="left|center"
                    android:text="@string/last_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dp_15" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/dp_5"
                    android:layout_marginTop="@dimen/dp_5"
                    android:layout_weight="0.6"
                    android:gravity="left|center"
                    android:background="@drawable/bg_edittext"
                    android:paddingLeft="@dimen/dp_5"
                    android:id="@+id/edt_last_name"
                    android:singleLine="true"
                    android:imeOptions="actionNext"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:layout_weight="0.15">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:gravity="left|center"
                    android:text="Parent"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dp_15" />

                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/dp_5"
                    android:layout_marginTop="@dimen/dp_5"
                    android:layout_weight="0.6"
                    android:gravity="left|center"
                    android:paddingLeft="@dimen/dp_5"
                    android:paddingRight="@dimen/dp_5"
                    style="@style/SpinnerTheme"
                    android:entries="@array/types"
                    android:id="@+id/spn_parentNames"
                    ></Spinner>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:layout_weight="0.15">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:gravity="left|center"
                    android:text="@string/student_id"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dp_15" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/dp_5"
                    android:layout_marginTop="@dimen/dp_5"
                    android:layout_weight="0.6"
                    android:gravity="left|center"
                    android:background="@drawable/bg_edittext"
                    android:paddingLeft="@dimen/dp_5"
                    android:id="@+id/edt_mobile_number"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:inputType="phone"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:layout_weight="0.15">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:gravity="left|center"
                    android:text="@string/college_email"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dp_15" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/dp_5"
                    android:layout_marginTop="@dimen/dp_5"
                    android:layout_weight="0.6"
                    android:gravity="left|center"
                    android:background="@drawable/bg_edittext"
                    android:paddingLeft="@dimen/dp_5"
                    android:id="@+id/edt_email"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:layout_weight="0.15">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:gravity="left|center"
                    android:text="@string/password_"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dp_15" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/dp_5"
                    android:layout_marginTop="@dimen/dp_5"
                    android:layout_weight="0.6"
                    android:gravity="left|center"
                    android:background="@drawable/bg_edittext"
                    android:paddingLeft="@dimen/dp_5"
                    android:paddingRight="@dimen/dp_5"
                    android:id="@+id/edt_password"
                    android:singleLine="true"
                    android:imeOptions="actionDone"></EditText>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:layout_weight="0.15">


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:layout_weight="0.15"
                android:orientation="vertical"
                android:id="@+id/layout_business_unit">


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:layout_weight="0.15"
                android:orientation="vertical"
                android:id="@+id/layout_business_unit_location">


            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_weight="0.05">


        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:background="@color/blue"
        android:gravity="center"
        android:text="Save"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/dp_20"
        android:onClick="save"/>
</LinearLayout>